<resources>
    <string name="app_name">PhoneBook</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="autograph">Белов Леонид Сергеевич РИБО-02-23</string>
    <string name="next">Продолжить</string>
    <string name="change_image">Изменить изображение</string>
    <string name="new_contact">Новый контакт</string>
    <string name="create">Создать</string>
    <string name="email">Почта</string>
    <string name="phone_number">Номер</string>
    <string name="full_name">ФИО</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="log_out">Выйти</string>
    <string name="call">Позвонить</string>
    <string name="share">Поделиться</string>
    <string name="delete">Удалить</string>
    <string name="log_out_string">Выйти</string>
    <string name="create_string">Создать</string>
    <string name="are_you_sure_all_data_will_be_lost">Вы точно хотите выйти?\nВсе данные будут удалены</string>
    <string name="attention">Внимание</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="are_you_sure_you_want_to_delete">"Вы точно хотите удалить контакт "</string>
    <string name="no_data_to_be_shown">Нет данных для отображения</string>
    <string name="check_intenet_connection">Проверьте интернет-соедниенение</string>
    <string name="invalid_login_or_password">Неправильный логин или пароль</string>
    <string name="try_again">Попробуйте еще раз</string>
    <string name="fill_in_fields">Заполните поля</string>
    <string name="succsesful_write">Запись прошла успешно</string>
    <string name="error_on_write">Ошибка при записи</string>
    <string name="choose_image">Выберите изображение</string>
    <string name="something_wrong_try_again">Что-то пошло не так, попробуйте еще раз</string>
    <string name="unexpected_error_occured_check_permissions">Произошла непредвиденная ошибка, проверьте разрешения</string>
    <string name="no_suitable_application_found">Не найдено подходящее приложение</string>
    <string name="fullname">"ФИО: "</string>
    <string name="number">"\nНомер: "</string>
    <string name="share_contact">Поделиться контактом</string>
    <string name="error_on_deleting_contact">Ошибка при удалении контакта</string>
    <string name="to_download_data_use_login">Для загрузки данных выполните вход в аккаунт</string>
    <string name="unable_to_pick_image_check_permissions">Не удалось выбрать изображение, проверьте разрешения</string>
    <string name="error_on_contact_creating">Ошибка при создании контактов</string>
</resources>