<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="270sp"
        android:layout_height="60sp"
        android:layout_marginTop="52sp"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/number_edit"
        app:layout_constraintTop_toBottomOf="@+id/avatar_edit" />

    <ImageView
        android:id="@+id/avatar_edit"
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88sp"
        app:layout_constraintStart_toStartOf="@+id/name_edit"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_contact"
        app:srcCompat="@drawable/avatar_placeholder" />

    <EditText
        android:id="@+id/number_edit"
        android:layout_width="270sp"
        android:layout_height="60sp"
        android:layout_marginTop="28sp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <Button
        android:id="@+id/create_contact_button"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginBottom="60sp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/number_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:clickable="true"
        android:contentDescription="@string/change_image"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_edit"
        app:layout_constraintStart_toEndOf="@+id/avatar_edit"
        app:layout_constraintTop_toTopOf="@+id/avatar_edit"
        app:srcCompat="@drawable/add_photo" />

    <TextView
        android:id="@+id/tv_new_contact"
        android:layout_width="270sp"
        android:layout_height="120sp"
        android:layout_marginTop="40sp"
        android:fontFamily="monospace"
        android:text="@string/new_contact"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/avatar_edit"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>